# SATsolver

./: CMakeLists.txt  README.md  assignment.cpp  assignment.h  clause.cpp  clause.h  cnf.cpp  cnf.h  lit.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  priority.cpp  priority.h  solver.cpp  solver.h  test.sh  watch_list.cpp  watch_list.h
src/: assignment.cpp  assignment.h  clause.cpp  clause.h  cnf.cpp  cnf.h  graph.cpp  graph.h  lit.h  logger.cpp  logger.h  main.cpp  occ_list.cpp  occ_list.h  parser.cpp  parser.h  priority.cpp  priority.h  sat_bool.h  solver.cpp  solver.h  watch_list.cpp  watch_list.h
src/exceptions/: sat_exception.h
